--- a/src/app/Admin/actualites/actualite-list/actualite-list.component.html
+++ b/src/app/Admin/actualites/actualite-list/actualite-list.component.html
@@ -6,7 +6,7 @@
       <mat-expansion-panel-header>
         {{actualite.titre}}
       </mat-expansion-panel-header>
-      <div class="actualite-image">
+      <div class="content-image">
         <img [src]= "actualite.imagePath" [alt]= "actualite.titre">
       </div>
       {{actualite.contenu}}
