--- a/src/app/Admin/admin.component.css
+++ b/src/app/Admin/admin.component.css
@@ -89,3 +89,13 @@ mat-card {
   width: 80%;
   min-height: 100%;
 }
+
+
+.content-image {
+  width: 20%;
+  margin: auto;
+}
+
+.content-image img {
+  width: 100%;
+}
