--- a/src/app/Admin/article/articles-list/article-list.component.html
+++ b/src/app/Admin/article/articles-list/article-list.component.html
@@ -5,7 +5,7 @@
       <mat-expansion-panel-header>
         {{article.designation}}
       </mat-expansion-panel-header>
-      <div class="article-image">
+      <div class="content-image">
         <img [src]= "article.imagePath" [alt]= "article.designation">
       </div>
       {{article.prix}}
