--- a/src/app/Admin/comite/comite-list/comite-list.component.html
+++ b/src/app/Admin/comite/comite-list/comite-list.component.html
@@ -6,7 +6,7 @@
       <mat-expansion-panel-header>
         {{comite.nom}}
       </mat-expansion-panel-header>
-      <div class="comite-image">
+      <div class="content-image">
         <img [src]= "comite.imagePath" [alt]= "comite.nom">
       </div>
       {{comite.role}}
