--- a/src/app/Admin/coupe/coupe-list/coupe-list.component.html
+++ b/src/app/Admin/coupe/coupe-list/coupe-list.component.html
@@ -6,7 +6,7 @@
       <mat-expansion-panel-header>
         {{coupe.titre}}
       </mat-expansion-panel-header>
-      <div class="coupe-image">
+      <div class="content-image">
         <img [src]= "coupe.imagePath" [alt]= "coupe.titre">
       </div>
       {{coupe.nombre}}
