--- a/src/app/Admin/photo/photos-list/photo-list.component.html
+++ b/src/app/Admin/photo/photos-list/photo-list.component.html
@@ -6,7 +6,7 @@
       <mat-expansion-panel-header>
         {{photo.description}}
       </mat-expansion-panel-header>
-      <div class="photo-image">
+      <div class="content-image">
         <img [src]= "photo.imagePath" [alt]= "photo.description">
       </div>
       <mat-action-row>
