--- a/src/app/Admin/slider/slider-list/slider-list.component.html
+++ b/src/app/Admin/slider/slider-list/slider-list.component.html
@@ -6,7 +6,7 @@
       <mat-expansion-panel-header>
         {{slider.description}}
       </mat-expansion-panel-header>
-      <div class="slider-image">
+      <div class="content-image">
         <img [src]= "slider.imagePath" [alt]= "slider.description">
       </div>
       <mat-action-row>
