--- a/src/app/Admin/sponsor/sponsor-list/sponsor-list.component.html
+++ b/src/app/Admin/sponsor/sponsor-list/sponsor-list.component.html
@@ -6,7 +6,7 @@
       <mat-expansion-panel-header>
         {{sponsor.nom}}
       </mat-expansion-panel-header>
-      <div class="sponsor-image">
+      <div class="content-image">
         <img [src]= "sponsor.imagePath" [alt]= "sponsor.nom">
       </div>
       <mat-action-row>
