--- a/src/app/Admin/academie/academie-list/academie-list.component.html
+++ b/src/app/Admin/academie/academie-list/academie-list.component.html
@@ -6,7 +6,7 @@
       <mat-expansion-panel-header>
         {{academie.titre}}
       </mat-expansion-panel-header>
-      <div class="academie-image">
+      <div class="content-image">
         <img [src]= "academie.imagePath" [alt]= "academie.titre">
       </div>
       {{academie.contenu}}
