--- a/src/app/Admin/players/players-list/players-list.component.html
+++ b/src/app/Admin/players/players-list/players-list.component.html
@@ -5,7 +5,7 @@
       <mat-expansion-panel-header>
         {{player.nom}}
       </mat-expansion-panel-header>
-      <div class="player-image">
+      <div class="content-image">
         <img [src]= "player.imagePath" [alt]= "player.nom">
       </div>
       {{player.poste}}
