--- a/src/app/Admin/staff/staff-list/staff-list.component.html
+++ b/src/app/Admin/staff/staff-list/staff-list.component.html
@@ -6,7 +6,7 @@
       <mat-expansion-panel-header>
         {{staff.nom}}
       </mat-expansion-panel-header>
-      <div class="staff-image">
+      <div class="content-image">
         <img [src]= "staff.imagePath" [alt]= "staff.nom">
       </div>
       {{staff.role}}
